Fixed MAGETWO-890: Visual Design Editor Toolbar Page Types Hierarchy Styling - fixed selected page type for pages that don't use page types ('customer/account/login', for instance) - fixed page types scroll bar initialization (it works strange when the scrollable element is hidden) - introduced JS event 'activate_toolbar_cell.vde' for the toolbar cell elements - implemented toolbar cell content collapsing when clicking outside of a cell

--- a/app/code/core/Mage/DesignEditor/view/frontend/css/page_types.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/page_types.css
@@ -7,7 +7,7 @@
  * @license     {license_link}
  */
 
-#vde_page_types_hierarchy {
+#vde_page_types_hierarchy .vde_toolbar_cell_content {
     padding: 12pt 4pt 12pt 0;
 }
 #vde_page_types_tree {
